--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uniswap/v3-sdk": "^3.9.0",
     "axios": "^1.2.1",
     "bignumber.js": "^9.1.0",
+    "dotenv": "^16.3.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.2",
     "hardhat": "^2.11.2",
